--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -400,17 +400,18 @@ stabilizzatore di corrente o di tensione.
 %         Introduzione
 %================================
 \subsection{Introduzione}
-Durante l’esperienza si è raccolto un grande numero di dati, acquisiti in
-run diversi in base alla resistenza scelta, dunque a zone differenti della
-curva. Sì è posto il problema di eliminare degli outliers in modo
-indipendente dal modello scelto. Inoltre le varie serie di dati si
-sovrappongono, dunque è necessario eliminare quei dati che, non aggiungendo
-informazioni utili, vanno a “sporcare” il grafico.
-
-Il sistema di filtraggio di dati implementato nell'eseguibile si compone di 2
-fasi: la prima è l’eliminazione di outliers, la seconda consiste
-nell'eliminazione di dati non significativi.
-
+All'interno dell'acquisione, sono stati raccolti un numero ingente di dati,
+suddivisibili in base alla resistenza adottata e dunque facenti riferimento
+a zone differenti della curva. A seguito della calibrazione, ci si è quindi
+posto il problema di effettuare l'eliminazione degli outliers in modo
+indipendente dalla scelta del modello per il fit. Le varie serie effettuate,
+inoltre, si sovrappongono in alcune zone del grafico. Dunque è stato
+necessario eliminare i dati che, non aggiungendo informazioni utili,
+andavano a "sporcare" il grafico.
+Il sistema di filtraggio di dati implementato
+nell'eseguibile si compone di 2 fasi: la prima è l’eliminazione degli outliers, la
+seconda consiste nell'eliminazione dei dati non significativi.
+%sono arrivata qui
 %================================
 %         Procedimento
 %================================
