--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -416,10 +416,10 @@ outliers, la seconda dei dati non significativi.
 %================================
 \subsection{Procedimento}
 Supponiamo di avere una serie di dati $(x, y)$ e assumiamo che siano
-indipendenti tra loro. Quest'ipotesi
+indipendenti tra loro. Quest'ipotesi non è vera in generale, ma
 è tanto più lecita quanto più la correlazione tra le varianze delle misure su
-$x$ e $y$ è indipendente dai valori assunti dalle $x$ e $y$ stesse e, più
-sono numerosi i dati racchiusi entro una deviazione lungo $x$: in questo caso,
+$x$ e $y$ è indipendente dai valori assunti dalle $x$ e $y$ stesse e quanto più
+sono numerosi i dati racchiusi entro una deviazione standard lungo $x$: in questo caso,
 infatti, la correlazione viene inclusa nella varianza lungo $y$.
 Supponiamo inoltre che siano note a priori le $\sigma_x ^2 \coloneqq \var{x}$
 e che la loro distribuzione di probabilità sia normale (le distribuzioni
