--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -516,7 +516,7 @@ $\mu_y \pm \sigma_y$ ci dà una descrizione della distribuzione dei nostri dati.
 %================================
 \subsection{$\var{\mu_y}$}
 Mentre $\sigma_y$ rappresenta la distribuzione dei dati intorno al valor medio 
-$\mu_y$, $\var{\mu_y}$ dà un'idea dell’incertezza che attribuiamo alla
+$\mu_y$, $\var{\mu_y}$ ci fornisce un'indice dell’incertezza che attribuiamo alla
 miglior stima di $y$. Questo è utile per determinare la convergenza della
 stima in funzione dei dati acquisiti.
 Infatti tanto più è elevata la densità dei dati rispetto alla deviazione standard
