--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -83,7 +83,7 @@ attraverso il diodo, all'aumentare della tensione ai suoi capi.
 Per poter modellare la componente -ohmica- di un diodo
 percorso da correnti alte si propone un modello semplice di resistenza
 parassita in serie, in grado di descriverne gli effetti, verificandone 
-sperimentalmente la validità.
+sperimentalmente l'accordo.
 
 %================================================================
 %                         Cenni teorici
