--- a/LaTeX/diodo.tex
+++ b/LaTeX/diodo.tex
@@ -297,7 +297,7 @@ nelle opportune coppie corrente-tensione relative al diodo. Dunque i dati sono
 stati convertiti in tensione secondo le calibrazioni dei relativi canali (
 \verb+ADC0+ e \verb+ADC1+). Tale operazione è stata effettuata considerando
 opportunamente gli errori come descritto nel paragrafo \ref{sec: cal}.
-Successivamente, le tensioni relative ai capi della resistenza $R$ hanno
+Successivamente, le tensioni relative ai capi della resistenza $R1$ hanno
 permesso di stimare la rispettiva corrente di lavoro attraverso la legge di Ohm. 
 Si è quindi effettuato un filtraggio volto all'eliminazione degli outliers e 
 dei punti meno significativi, assumendoli quali variabili indipendenti e di 
